src/components/Username/Username.module.scss
@import '../../styles/shared';

.container {
  display: flex;
  align-items: center;
}

.avatar {
  width: 36px;
  height: 36px;
  margin-right: 0.5rem;
  display: flex;
  justify-content: center;
  align-items: center;

  &__spinner {
    width: 25px;
    height: 25px;
  }
}

.username {
  font-size: 19px;

  &__hidden {
    color: $live-updates-light-blue;
  }
}

.link {
  color: $button-primary;
  cursor: pointer;

  &:hover {
    color: $white;
  }
}

